// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-kpOJdX dcjZxn"
  >
    <div
      class="sc-dxgOiQ YDkMG"
    >
      <div
        class="sc-ckVGcZ hWXbch"
      >
        <div
          class="sc-kEYyzF sc-iAyFgw cCgybq"
        >
          ERROR
        </div>
        <h4
          class="sc-brqgnP ghTbFe"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-jKJlTe loXQau"
      >
        <pre
          class="sc-jAaTju jVGCzW"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-hMqMXs ensEbq"
      >
        <a
          class="sc-eNQAEJ lmdVTE"
        >
          <i
            class="sc-eXEjpC fSAaHQ fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-kpOJdX dcjZxn"
  >
    <div
      class="sc-dxgOiQ YDkMG"
    >
      <div
        class="sc-ckVGcZ hWXbch"
      >
        <div
          class="sc-kEYyzF sc-iAyFgw cCgybq"
        >
          ERROR
        </div>
        <h4
          class="sc-brqgnP ghTbFe"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-jKJlTe loXQau"
      >
        <pre
          class="sc-jAaTju jVGCzW"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
